fix debug build
had to use /NODEFAULTLIB:LIBCMT because QtSDK does not come with libs linked against libcmtd
32bit build setup is complete now
64bit build will not be done since, again, QtDSK does not come with x64 libs at all...

--- a/vsprops/CodeGen_Debug.props
+++ b/vsprops/CodeGen_Debug.props
@@ -10,6 +10,14 @@
       <Optimization>Disabled</Optimization>
       <MinimalRebuild>false</MinimalRebuild>
     </ClCompile>
+    <MOC>
+      <QtNoDebug>false</QtNoDebug>
+      <QtCommandLine>/I"$(SolutionDir)src\common\src" /I"$(SolutionDir)src\core\src" /I"$(ExternalsDir)glew-1.6.0\include" /I"$(ExternalsDir)sdl-1.2.15\include" /I"$(ExternalsDir)qhexedit" /D"_DEBUG"</QtCommandLine>
+    </MOC>
+    <MOC />
+    <Link>
+      <AdditionalOptions>/NODEFAULTLIB:LIBCMT %(AdditionalOptions)</AdditionalOptions>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
