--- a/vsprops/Qt.props
+++ b/vsprops/Qt.props
@@ -18,7 +18,7 @@
       <QtUicExt>.h</QtUicExt>
     </UIC>
     <MOC>
-      <QtCommandLine>/I"$(SolutionDir)\src\common\src" /I"$(SolutionDir)\src\core\src" /I"$(SolutionDir)\externals\glew-1.6.0\include" /I"$(SolutionDir)\externals\sdl-1.2.15\include" /I"$(SolutionDir)\externals\qhexedit"</QtCommandLine>
+      <QtCommandLine>/I"$(SolutionDir)src\common\src" /I"$(SolutionDir)src\core\src" /I"$(ExternalsDir)glew-1.6.0\include" /I"$(ExternalsDir)sdl-1.2.15\include" /I"$(ExternalsDir)qhexedit"</QtCommandLine>
       <QtKeywords>false</QtKeywords>
     </MOC>
     <Link>
