output binaries for the same arch to the same directory (so they share config files)

--- a/vsprops/App.props
+++ b/vsprops/App.props
@@ -2,10 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros">
-    <GekkoBinDir>$(SolutionDir)bin\$(PlatformName)$(Configuration)\</GekkoBinDir>
+    <GekkoBinDir>$(SolutionDir)bin\$(PlatformName)\</GekkoBinDir>
   </PropertyGroup>
   <PropertyGroup>
     <OutDir>$(GekkoBinDir)</OutDir>
+    <TargetName>$(ProjectName)$(Configuration)</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <PostBuildEvent>
