gekko-qt: Add a first-start wizard for easy setup.

--- a/src/gekko_qt/CMakeLists.txt
+++ b/src/gekko_qt/CMakeLists.txt
@@ -7,7 +7,9 @@ set(SRCS
             src/hotkeys.cpp
             src/image_info.cpp
             src/main.cpp
-            src/ramview.cpp)
+            src/path_list.cpp
+            src/ramview.cpp
+            src/welcome_wizard.cpp)
 
 qt4_wrap_ui(UI_HDRS
                     src/callstack.ui
@@ -15,7 +17,8 @@ qt4_wrap_ui(UI_HDRS
                     src/gekko_regs.ui
                     src/hotkeys.ui
                     src/image_info.ui
-                    src/main.ui)
+                    src/main.ui
+                    src/welcome_wizard.ui)
 
 qt4_wrap_cpp(MOC_SRCS
                         src/bootmanager.hxx
@@ -26,10 +29,13 @@ qt4_wrap_cpp(MOC_SRCS
                         src/hotkeys.hxx
                         src/image_info.hxx
                         src/main.hxx
-                        src/ramview.hxx)
+                        src/path_list.hxx
+                        src/ramview.hxx
+                        src/welcome_wizard.hxx)
 
 # add uic results to include directories
 include_directories(${CMAKE_CURRENT_BINARY_DIR})
+include_directories(./src/)
 
 add_executable(gekko-qt ${SRCS} ${MOC_SRCS} ${UI_HDRS})
 target_link_libraries(gekko-qt core video_core input_common common qhexedit ${QT_LIBRARIES} ${OPENGL_LIBRARIES} ${SDL_LIBRARY} rt GLEW ${GLFW_LIBRARIES})
